--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -34,13 +34,11 @@
                             </a>
                         </li>
                         
-                        {# START: Add Contractor Link #}
                         <li class="nav-item">
                             <a class="nav-link {% if 'contractor' in request.endpoint %}active{% endif %}" href="{{ url_for('contractor.get_contractors') }}">
                                 <i class="fas fa-hard-hat fa-fw me-1"></i>المقاولون
                             </a>
                         </li>
-                        {# END: Add Contractor Link #}
                         
                         {% if current_user.role == 'admin' %}
                         <li class="nav-item">
@@ -49,7 +47,16 @@
                             </a>
                         </li>
                         {% endif %}
-                        <li class="nav-item dropdown">
+                        
+                        {# START: Universal Payment Button #}
+                        <li class="nav-item ms-2">
+                             <button type="button" class="btn btn-success btn-sm" data-bs-toggle="modal" data-bs-target="#addPaymentModal">
+                                <i class="fas fa-plus me-1"></i> إضافة دفعة
+                            </button>
+                        </li>
+                        {# END: Universal Payment Button #}
+
+                        <li class="nav-item dropdown ms-2">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 <i class="fas fa-user-circle fa-fw me-1"></i>{{ current_user.username }}
                             </a>
@@ -77,6 +84,12 @@
             {% block content %}{% endblock %}
         </div>
     </main>
+
+    {# START: Include Universal Payment Modal #}
+    {% if current_user.is_authenticated %}
+        {% include "partials/_payment_modal.html" %}
+    {% endif %}
+    {# END: Include Universal Payment Modal #}
 
     <div class="toast-container position-fixed bottom-0 end-0 p-3">
         {% with messages = get_flashed_messages(with_categories=true) %}
